fix: Align buttons when dezooming

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -168,10 +168,12 @@ column-width-thumbnail-bigger = 7rem
 
 .fil-content-file-action
 .fil-content-header-action
-    flex 0 0 5%
+    display flex
+    justify-content flex-end
+    flex 1
     width 1.5rem
-    padding 0 0 0 .5rem
-    margin-right .5rem
+    padding-right .8rem
+    margin-right 2rem
 
 .fil-content-header-action
     button
@@ -369,12 +371,13 @@ column-width-thumbnail-bigger = 7rem
     .fil-content-mobile-header.fil-content-header-sortdesc
         flex 1 1 auto
 
-    .fil-content-mobile-header.fil-content-header-action
-        width auto
+    .fil-content-header-action
         padding 0
-        flex 0 0 3rem
-        display flex
-        justify-content center
+        margin-right 1em
+
+    .fil-content-file-action
+        padding-right .2rem
+        margin-right 1em
 
     .fil-content-cell.fil-content-file
     .fil-content-row-bigger .fil-content-cell.fil-content-file
@@ -391,18 +394,8 @@ column-width-thumbnail-bigger = 7rem
         .fil-content-sharestatus
             display none
 
-    .fil-content-file-action
-        opacity    1
-        flex       0 0 3rem
-        display flex
-        justify-content center
-        padding    0
-
     .fil-content-cell
         &.fil-content-status
-            padding 0
-
-        &.fil-content-file-action
             padding 0
 
         &.fil-content-file
